# OpenCL-Apple-M1-Benchmark

./: CMakeLists.txt  README.md  main.c
